Package.json updated
Signed-off-by: Surajit Singha Sisir <sci.surajit@gmail.com>

--- a/package.json
+++ b/package.json
@@ -12,13 +12,46 @@
     "readme.md"
   ],
   "keywords": [
-    "scss",
-    "css",
-    "breakpoints",
-    "responsive",
-    "mixins",
-    "sass"
-  ],
+  "scss",
+  "sass",
+  "css",
+  "grid",
+  "grid system",
+  "responsive",
+  "responsive grid",
+  "layout",
+  "layout system",
+  "flexbox",
+  "css grid",
+  "holy grail layout",
+  "columns",
+  "rows",
+  "breakpoints",
+  "media queries",
+  "mixins",
+  "utilities",
+  "utility classes",
+  "sass mixins",
+  "scss mixins",
+  "sass utilities",
+  "scss utilities",
+  "sass library",
+  "scss library",
+  "sass responsive",
+  "scss responsive",
+  "frontend",
+  "ui layout",
+  "web layout",
+  "css framework",
+  "lightweight css",
+  "modular css",
+  "design system",
+  "css helpers",
+  "css cdn",
+  "mastors",
+  "gridder"
+],
+
   "author": "KEHEM-IT",
   "license": "MIT",
   "repository": {
