--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "mastors-gridder",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A lightweight SCSS grid and layout utility with responsive mixins and CSS helpers for building flexible layouts, from simple grids to Holy Grail structures.",
-  "main": "_mastors-gridder.scss",
+  "main": "index.scss",
   "files": [
-    "_mastors-gridder.scss"
+    "_mastors-gridder.scss",
+    "index.scss"
   ],
   "keywords": [
     "scss",
@@ -55,5 +56,5 @@
   "bugs": {
     "url": "https://github.com/KEHEM-IT/Mastors-Gridder/issues"
   },
-  "homepage": "https://github.com/KEHEM-IT/Mastors-Gridder#readme"
+  "homepage": "https://mastorscdn.kehem.com/mastors-gridder"
 }
